--- a/pepeizqs deals web/Pages/Componentes/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Buscador.razor
@@ -36,7 +36,7 @@
                         </div>
 
                         <div style="width: 12%;">
-                            @Juegos.JuegoFicha.MostrarMinimoPrecio(juego, true)
+                            @Juegos.JuegoFicha.MensajeMinimoActual(juego, true)
                         </div>
                     </div>
                 </a>
