--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosAñadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosAñadidos.razor
@@ -33,7 +33,7 @@
 						</div>
 
 						<div style="width: 20%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
-							@Juegos.JuegoFicha.MostrarMinimoPrecio(juego, false)
+							@Juegos.JuegoFicha.MensajeMinimoActual(juego, false)
 						</div>
 					</div>
 				</a>
