--- a/pepeizqs deals web/Pages/Componentes/UltimosAñadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/UltimosAñadidos.razor
@@ -35,7 +35,7 @@
 						</div>
 
 						<div style="width: 20%; padding: 4px 30px 4px 0px; text-align: right;">
-							@Juegos.JuegoFicha.MostrarMinimoPrecio(juego, true)
+							@Juegos.JuegoFicha.MensajeMinimoActual(juego, true)
 						</div>
 					</div>
 				</a>
