--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
@@ -66,7 +66,7 @@
 						{
 							bool fechaEncaja = Herramientas.Precios.CalcularAntiguedad(minimo);
 
-							if (fechaEncaja == true)
+							if (fechaEncaja == true && minimo.Descuento > 0)
 							{
 								juegosConMinimos.Add(juego);
 								break;
