--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -9,7 +9,7 @@
 <div class="texto-info">@ViewData["Title"]</div>
 
 <div class="row perfil-espacio-adicional">
-    <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+    <p>Your account contains personal data that you have given me. This page allows you to download or delete that data.</p>
     <p>
         <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
     </p>
