--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -25,6 +25,6 @@
     </li>*@
 
     <li class="nav-item">
-        <a class="perfil-lateral @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a>
+        <a class="perfil-lateral @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal Data</a>
     </li>
 </ul>
