--- a/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
@@ -14,35 +14,38 @@
 
 <input type="text" @oninput="TextoCambia" class="entrada-texto" />
 
-@if (juegos.Count > 0)
+@if (juegos != null)
 {
-    <div class="buscador-panel">
-        @foreach (var juego in juegos)
-        {
-            <div class="perfil-flexible-centrado perfil-espacio-top">
-                <a class="boton-pequeño" href="/game/@juego.Id" target="_blank">
-                    <div class="perfil-flexible-centrado">
-                        <div style="width: 12%;">
-                            <img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
-                        </div>
+    @if (juegos.Count > 0)
+    {
+        <div class="buscador-panel">
+            @foreach (var juego in juegos)
+            {
+                <div class="perfil-flexible-centrado perfil-espacio-top">
+                    <a class="boton-pequeño" href="/game/@juego.Id" target="_blank">
+                        <div class="perfil-flexible-centrado">
+                            <div style="width: 12%;">
+                                <img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
+                            </div>
 
-                        <div style="width: 76%; padding-left: 15px; padding-right: 15px;">
-                            @juego.Nombre
+                            <div style="width: 76%; padding-left: 15px; padding-right: 15px;">
+                                @juego.Nombre
 
-                            @if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext.User)) == true)
-                            {
-                                <br/> @juego.Id
-                            }
-                        </div>
+                                @if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext.User)) == true)
+                                {
+                                    <br /> @juego.Id
+                                }
+                            </div>
 
-                        <div style="width: 12%;">
-                            @Juegos.JuegoFicha.MensajeMinimoActual(juego, true)
+                            <div style="width: 12%;">
+                                @Juegos.JuegoFicha.MensajeMinimoActual(juego, true)
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-        }
-    </div>
+                    </a>
+                </div>
+            }
+        </div>
+    }
 }
 
 @code {
