--- a/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Tiendas.razor
@@ -51,42 +51,11 @@
 
 	#nullable disable
 
-	private async void ClickearTienda(MouseEventArgs e, string id)
+	private void ClickearTienda(MouseEventArgs e, string id)
 	{
 		if (id != null)
 		{
-			if (id == APIs.Steam.Tienda.Generar().Id)
-			{
-				await APIs.Steam.Tienda.BuscarOfertas(true);
-			}
-			else if (id == APIs.GamersGate.Tienda.Generar().Id)
-			{
-				await APIs.GamersGate.Tienda.BuscarOfertas();
-			}
-			else if (id == APIs.Gamesplanet.Tienda.GenerarUk().Id)
-			{
-				await APIs.Gamesplanet.Tienda.BuscarOfertasUk();
-			}
-			else if (id == APIs.Gamesplanet.Tienda.GenerarFr().Id)
-			{
-				await APIs.Gamesplanet.Tienda.BuscarOfertasFr();
-			}
-			else if (id == APIs.Gamesplanet.Tienda.GenerarDe().Id)
-			{
-				await APIs.Gamesplanet.Tienda.BuscarOfertasDe();
-			}
-			else if (id == APIs.Gamesplanet.Tienda.GenerarUs().Id)
-			{
-				await APIs.Gamesplanet.Tienda.BuscarOfertasUs();
-			}
-			else if (id == APIs.Fanatical.Tienda.Generar().Id)
-			{
-				await APIs.Fanatical.Tienda.BuscarOfertas();
-			}
-			else if (id == APIs.GreenManGaming.Tienda.Generar().Id)
-			{
-				await APIs.GreenManGaming.Tienda.BuscarOfertas();
-			}
+			TiendasCargar.AdminTiendas(id);
 
 			if (id == "divisas")
 			{
