--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -4,7 +4,7 @@
 }
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-        <a class="perfil-lateral @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a>
+        <a class="perfil-lateral @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Steam</a>
     </li>
 
     <li class="nav-item">
