--- a/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             <div class="menu-dropdown">
                 <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">@await UsuarioCoger.Nickname(UserManager, User)</button>
                 <div class="menu-dropdown-contenido">
-                    <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
+                    <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Steam</a>
                     <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Email">Email</a>
                     <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Password</a>
                     <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/PersonalData">Personal Data</a>
