--- a/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="texto-info">@ViewData["Title"]</div>
 
-@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.Perfil>(RenderMode.ServerPrerendered))
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.Steam>(RenderMode.ServerPrerendered))
 
 @* <partial name="_StatusMessage" for="StatusMessage" />
 
