--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                 <div class="menu-dropdown">
                     <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
                     <div class="menu-dropdown-contenido">
+                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Wishlist">Wishlist</a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">Historical Lows</a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">Last Added</a>
                     </div>
