--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
@@ -23,11 +23,11 @@
 						</div>
 
 						<div style="width: 5%; height: 16px; position: relative;">
-							<img src="@Juegos.JuegoFicha.IconoMinimoActual(juego)" class="juego-icono-tienda"/>
+							<img src="@Herramientas.JuegoFicha.IconoTiendaMinimoActual(juego)" class="juego-icono-tienda"/>
 						</div>
 
 						<div style="width: 15%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
-							@Juegos.JuegoFicha.MensajeMinimoActual(juego, false)
+							@Herramientas.JuegoFicha.PrecioMinimoActual(juego, false)
 						</div>
 					</div>
 				</a>
@@ -64,7 +64,7 @@
 					{
 						foreach (var minimo in juego.PrecioMinimosHistoricos)
 						{
-							bool fechaEncaja = Herramientas.Precios.CalcularAntiguedad(minimo);
+							bool fechaEncaja = Herramientas.JuegoFicha.CalcularAntiguedad(minimo);
 
 							if (fechaEncaja == true && minimo.Descuento > 0)
 							{
