--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -8,41 +8,37 @@
 @inject SignInManager<Usuario> SignInManager
 @inject IHttpContextAccessor HttpContextAccessor
 
-@if (SignInManager.IsSignedIn(HttpContextAccessor.HttpContext.User) == true)
+@if (SignInManager.IsSignedIn(HttpContextAccessor.HttpContext!.User) == true)
 {
 	<div class="perfil" style="padding: 15px 20px;">
 		@foreach (var juego in deseadosMostrar)
 		{
 			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
+				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Juego.Id">
 					<div class="perfil-flexible-centrado">
 						<div style="width: 15%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
+							<img src="@juego.Juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
 						</div>
 
 						<div style="width: 59%; padding: 4px 15px;">
-							<div>@juego.Nombre</div>
+							<div>@juego.Juego.Nombre</div>
 
 							<div class="perfil-flexible-centrado" style="justify-content: left;">
 								@* <div style="width: 20px; height: 20px;"><img src="@CargarImagenDRM(juego)" style="max-width: 100%; max-height: 100%;" /></div> *@
 
-								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext.User)) == true)
+								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 								{
-									<div style="margin-left: 10px; margin-right: 10px;">@juego.Id</div>
+									<div style="margin-left: 10px; margin-right: 10px;">@juego.Juego.Id</div>
 								}
 							</div>
 						</div>
 
-						<div style="width: 10%; padding: 4px 30px 4px 0px; text-align: right;">
-							@* <img src="@CargarImagenTienda(juego)" style="max-width: 100%; max-height: 100%;" /> *@
-						</div>
-
 						<div style="width: 6%; text-align: center;" class="juego-descuento">
-							@* @juego.PrecioActualesTiendas[0].Descuento.ToString()% *@
+							@Herramientas.JuegoFicha.CargarMinimoActualUnDRM(juego.Juego, juego.DRM, false).Descuento.ToString()%
 						</div>
 
 						<div style="width: 10%; padding: 4px 15px 4px 15px; text-align: center; font-size: 18px;">
-							@Juegos.JuegoFicha.MensajeMinimoActual(juego, false)
+							@Herramientas.JuegoFicha.PrepararPrecio(@Herramientas.JuegoFicha.CargarMinimoActualUnDRM(juego.Juego, juego.DRM, true).Precio, Herramientas.JuegoMoneda.Euro)
 						</div>
 					</div>
 				</a>
@@ -55,7 +51,7 @@
 
 	#nullable disable
 
-	private List<Juegos.Juego> deseadosMostrar = new List<Juegos.Juego>();
+	private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
 	private Usuario usuario = new Usuario();
 
 	private int cantidad = 0;
@@ -64,13 +60,13 @@
 	{
 		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
 
-		deseadosMostrar = new List<Juegos.Juego>();
-		List<UsuarioDeseado> deseados = new List<UsuarioDeseado>();
+		deseadosMostrar = new List<JuegoDeseadoMostrar>();
+		List<JuegoDeseado> deseados = new List<JuegoDeseado>();
 		List<string> deseadosSteam = LeerSteamDeseados(usuario.SteamWishlist);
 
 		if (usuario.Wishlist != null)
 		{
-			deseados = JsonConvert.DeserializeObject<List<UsuarioDeseado>>(usuario.Wishlist);
+			deseados = JsonConvert.DeserializeObject<List<JuegoDeseado>>(usuario.Wishlist);
 		}
 
 		foreach (var deseadoSteam in deseadosSteam)
@@ -91,9 +87,10 @@
 
 				if (juego != null)
 				{
-					UsuarioDeseado nuevoDeseado = new UsuarioDeseado();
+					JuegoDeseado nuevoDeseado = new JuegoDeseado();
 					nuevoDeseado.IdBaseDatos = juego.Id.ToString();
 					nuevoDeseado.IdSteam = deseadoSteam;
+					nuevoDeseado.DRM = Juegos.JuegoDRM.Steam;
 
 					deseados.Add(nuevoDeseado);
 				}
@@ -104,24 +101,64 @@
 
 		usuario.Wishlist = JsonConvert.SerializeObject(deseados);
 
-		
-
 		if (deseados.Count > 0)
 		{
 			foreach (var deseado in deseados)
 			{
 				Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(deseado.IdBaseDatos);
-				deseadosMostrar.Add(juego);
+
+				bool añadir = false;
+
+				List<Juegos.JuegoPrecio> ordenados = Herramientas.JuegoFicha.OrdenarPrecios(juego.PrecioActualesTiendas, deseado.DRM, false);
+
+				if (ordenados.Count > 0)
+				{
+					añadir = true;
+				}
+
+				if (añadir == true)
+				{
+					Juegos.Juego nuevoJuego = juego;
+					nuevoJuego.PrecioActualesTiendas = ordenados;
+
+					JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
+					nuevoDeseado.Juego = nuevoJuego;
+					nuevoDeseado.DRM = deseado.DRM;
+
+					deseadosMostrar.Add(nuevoDeseado);
+				}				
+			}
+
+			if (deseadosMostrar.Count > 0)
+			{
+				deseadosMostrar.Sort(delegate (JuegoDeseadoMostrar p1, JuegoDeseadoMostrar p2)
+				{
+					if (p1.Juego.PrecioActualesTiendas[0].Precio == p2.Juego.PrecioActualesTiendas[0].Precio)
+					{
+						return p2.Juego.PrecioActualesTiendas[0].FechaDetectado.CompareTo(p1.Juego.PrecioActualesTiendas[0].FechaDetectado);
+					}
+					else
+					{
+						return p1.Juego.PrecioActualesTiendas[0].Precio.CompareTo(p2.Juego.PrecioActualesTiendas[0].Precio);
+					}
+				});
 			}
 		}
 
 		await UserManager.UpdateAsync(usuario);
 	}
 
-	public class UsuarioDeseado
+	public class JuegoDeseado
 	{
 		public string IdBaseDatos { get; set; }
 		public string IdSteam { get; set; }
+		public Juegos.JuegoDRM DRM { get; set; }
+	}
+
+	public class JuegoDeseadoMostrar
+	{
+		public Juegos.Juego Juego { get; set; }
+		public Juegos.JuegoDRM DRM { get; set; }
 	}
 
 	private List<string> LeerSteamDeseados(string datos)
