--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAñadidos2.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAñadidos2.razor
@@ -28,14 +28,14 @@
 						<div style="width: 60%; padding: 4px 15px;">
 							@juego.Nombre
 
-							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext.User)) == true)
+							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 							{
 								<br /> @juego.Id
 							}
 						</div>
 
 						<div style="width: 20%; padding: 4px 30px 4px 0px; text-align: right;">
-							@Juegos.JuegoFicha.MensajeMinimoActual(juego, true)
+							@Herramientas.JuegoFicha.PrecioMinimoActual(juego, true)
 						</div>
 					</div>
 				</a>
