--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -42,7 +42,7 @@
         <div class="perfil-espacio-bottom juego-cabecera">      
 			<div class="perfil-flexible-centrado">
 				<div class="juego-flexible-izquierda">
-					<img src="@JuegoFicha.LimpiarImagenJuego(Model.juego.Imagenes.Header_460x215)" class="juego-imagen" />
+					<img src="@Herramientas.JuegoFicha.LimpiarImagenJuego(Model.juego.Imagenes.Header_460x215)" class="juego-imagen" />
 				</div>
 				<div class="juego-titulo">
 					@Model.juego.Nombre <br/>
@@ -102,7 +102,7 @@
 		{
 			@if (drm != JuegoDRM.NoEspecificado)
 			{
-				@if (JuegoFicha.PrepararMinimo(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas).Length > 0)
+				@if (Herramientas.JuegoFicha.CogerMinimoDRM(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas).Length > 0)
 				{
 					<div class="juego-drm-centrado perfil-espacio-bottom">
 						<div class="perfil juego-drm-imagen">
@@ -117,15 +117,15 @@
 						</div>
 
 						<div class="perfil" style="width: 90%;">
-							<div class="juego-minimo">@JuegoFicha.PrepararMinimo(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas)</div>
+							<div class="juego-minimo">@Herramientas.JuegoFicha.CogerMinimoDRM(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas)</div>
 
-							@if (JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm, false).Count > 0)
+							@if (Herramientas.JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm, false).Count > 0)
 							{
-								@foreach (JuegoPrecio precio in JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm, true))
+								@foreach (JuegoPrecio precio in Herramientas.JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm, true))
 								{
 									<a class="juego-boton-pequeño juego-imagen-boton-espacio" href="@Herramientas.EnlaceAcortador.Generar(precio.Enlace, precio.Tienda)" target="_blank">
 										<div class="perfil-flexible-centrado">
-											<img src="@JuegoFicha.SacarImagenTienda(precio.Tienda)" class="juego-imagen-boton" />
+											<img src="@Herramientas.JuegoFicha.SacarImagenTienda(precio.Tienda)" class="juego-imagen-boton" />
 
 											<div class="juego-descuento-precio">
 												<div style="font-size: 14px; margin: 20px;">
@@ -137,7 +137,7 @@
 												</div>
 
 												<div class="juego-precio">
-													@JuegoFicha.PrepararPrecio(precio.Precio, precio.Moneda)
+													@Herramientas.JuegoFicha.PrepararPrecio(precio.Precio, precio.Moneda)
 												</div>
 											</div>
 										</div>
