--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosMinimos.razor
@@ -23,7 +23,7 @@
 						</div>
 
 						<div style="width: 5%; height: 16px; position: relative;">
-							<img src="@Herramientas.JuegoFicha.IconoTiendaMinimoActual(juego)" class="juego-icono-tienda"/>
+							<img src="@Herramientas.JuegoFicha.IconoTiendaMinimoActualEntreTodosDRMs(juego)" class="juego-icono-tienda"/>
 						</div>
 
 						<div style="width: 15%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
