--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -1,4 +1,5 @@
 ﻿@using APIs.Steam;
+@using Juegos;
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
 @using Newtonsoft.Json;
@@ -14,31 +15,33 @@
 		@foreach (var juego in deseadosMostrar)
 		{
 			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Juego.Id">
+				<a class="boton-pequeño" style="padding: 0px;" href="@Herramientas.EnlaceAcortador.Generar(juego.Precio.Enlace, juego.Precio.Tienda)" target="_blank">
 					<div class="perfil-flexible-centrado">
 						<div style="width: 15%;">
 							<img src="@juego.Juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
 						</div>
 
-						<div style="width: 59%; padding: 4px 15px;">
+						<div style="width: 69%; padding: 4px 15px;">
 							<div>@juego.Juego.Nombre</div>
 
 							<div class="perfil-flexible-centrado" style="justify-content: left;">
-								@* <div style="width: 20px; height: 20px;"><img src="@CargarImagenDRM(juego)" style="max-width: 100%; max-height: 100%;" /></div> *@
+								<div style="width: 20px; height: 20px;"><img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 100%; max-height: 100%;" /></div>
+
+								<div style="width: 20px; height: 20px; margin-left: 10px;"><img src="@Herramientas.JuegoFicha.IconoTiendaMinimoActualUnDRM(juego.Precio)" style="max-width: 100%; max-height: 100%;" /></div>
 
 								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 								{
-									<div style="margin-left: 10px; margin-right: 10px;">@juego.Juego.Id</div>
+									<div style="margin-left: 10px;">@juego.Juego.Id</div>
 								}
 							</div>
 						</div>
 
 						<div style="width: 6%; text-align: center;" class="juego-descuento">
-							@Herramientas.JuegoFicha.CargarMinimoActualUnDRM(juego.Juego, juego.DRM, false).Descuento.ToString()%
+							@juego.Precio.Descuento.ToString()%
 						</div>
 
 						<div style="width: 10%; padding: 4px 15px 4px 15px; text-align: center; font-size: 18px;">
-							@Herramientas.JuegoFicha.PrepararPrecio(@Herramientas.JuegoFicha.CargarMinimoActualUnDRM(juego.Juego, juego.DRM, true).Precio, Herramientas.JuegoMoneda.Euro)
+							@Herramientas.JuegoFicha.PrepararPrecio(juego.Precio.Precio, Herramientas.JuegoMoneda.Euro)
 						</div>
 					</div>
 				</a>
@@ -49,117 +52,110 @@
 
 @code {
 
-	#nullable disable
+    #nullable disable
 
-	private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
-	private Usuario usuario = new Usuario();
+    private List<JuegoDeseadoMostrar> deseadosMostrar = new List<JuegoDeseadoMostrar>();
+    private Usuario usuario = new Usuario();
 
-	private int cantidad = 0;
+    private int cantidad = 0;
 
-	protected override async void OnInitialized()
-	{
-		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
+    protected override void OnInitialized()
+    {
+        usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
 
-		deseadosMostrar = new List<JuegoDeseadoMostrar>();
-		List<JuegoDeseado> deseados = new List<JuegoDeseado>();
-		List<string> deseadosSteam = LeerSteamDeseados(usuario.SteamWishlist);
+        deseadosMostrar = new List<JuegoDeseadoMostrar>();
+        List<JuegoDeseado> deseados = new List<JuegoDeseado>();
+        List<string> deseadosSteam = LeerSteamDeseados(usuario.SteamWishlist);
 
-		if (usuario.Wishlist != null)
-		{
-			deseados = JsonConvert.DeserializeObject<List<JuegoDeseado>>(usuario.Wishlist);
-		}
+        if (usuario.Wishlist != null)
+        {
+            deseados = JsonConvert.DeserializeObject<List<JuegoDeseado>>(usuario.Wishlist);
+        }
 
-		foreach (var deseadoSteam in deseadosSteam)
-		{
-			bool añadir = true;
+        foreach (var deseadoSteam in deseadosSteam)
+        {
+            bool añadir = true;
 
-			foreach (var deseado in deseados)
-			{
-				if (deseado.IdSteam == deseadoSteam)
-				{
-					añadir = false;
-				}
-			}
+            foreach (var deseado in deseados)
+            {
+                if (deseado.IdSteam == deseadoSteam)
+                {
+                    añadir = false;
+                }
+            }
 
-			if (añadir == true)
-			{
-				Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(null, deseadoSteam);
+            if (añadir == true)
+            {
+                Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(null, deseadoSteam);
 
-				if (juego != null)
-				{
-					JuegoDeseado nuevoDeseado = new JuegoDeseado();
-					nuevoDeseado.IdBaseDatos = juego.Id.ToString();
-					nuevoDeseado.IdSteam = deseadoSteam;
-					nuevoDeseado.DRM = Juegos.JuegoDRM.Steam;
+                if (juego != null)
+                {
+                    JuegoDeseado nuevoDeseado = new JuegoDeseado();
+                    nuevoDeseado.IdBaseDatos = juego.Id.ToString();
+                    nuevoDeseado.IdSteam = deseadoSteam;
+                    nuevoDeseado.DRM = Juegos.JuegoDRM.Steam;
 
-					deseados.Add(nuevoDeseado);
-				}
-			}
-		}
+                    deseados.Add(nuevoDeseado);
+                }
+            }
+        }
 
-		cantidad = deseados.Count;
+        cantidad = deseados.Count;
 
-		usuario.Wishlist = JsonConvert.SerializeObject(deseados);
+        usuario.Wishlist = JsonConvert.SerializeObject(deseados);
 
-		if (deseados.Count > 0)
-		{
-			foreach (var deseado in deseados)
-			{
-				Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(deseado.IdBaseDatos);
+        if (deseados.Count > 0)
+        {
+            foreach (var deseado in deseados)
+            {
+                Juegos.Juego juego = BaseDatos.Juegos.Buscar.UnJuego(deseado.IdBaseDatos);
 
-				bool añadir = false;
+                bool añadir = false;
 
-				List<Juegos.JuegoPrecio> ordenados = Herramientas.JuegoFicha.OrdenarPrecios(juego.PrecioActualesTiendas, deseado.DRM, false);
+                List<Juegos.JuegoPrecio> ordenados = Herramientas.JuegoFicha.OrdenarPrecios(juego.PrecioActualesTiendas, deseado.DRM, true);
 
-				if (ordenados.Count > 0)
-				{
-					añadir = true;
-				}
+                if (ordenados.Count > 0)
+                {
+                    añadir = true;
+                }
 
-				if (añadir == true)
-				{
-					Juegos.Juego nuevoJuego = juego;
-					nuevoJuego.PrecioActualesTiendas = ordenados;
+                if (añadir == true)
+                {
+                    Juegos.Juego nuevoJuego = juego;
+                    nuevoJuego.PrecioActualesTiendas = ordenados;
 
-					JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
-					nuevoDeseado.Juego = nuevoJuego;
-					nuevoDeseado.DRM = deseado.DRM;
+                    JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
+                    nuevoDeseado.Juego = nuevoJuego;
+                    nuevoDeseado.DRM = deseado.DRM;
+                    nuevoDeseado.Precio = ordenados[0];
 
-					deseadosMostrar.Add(nuevoDeseado);
-				}				
-			}
+                    deseadosMostrar.Add(nuevoDeseado);
+                }				
+            }
 
-			if (deseadosMostrar.Count > 0)
-			{
-				deseadosMostrar.Sort(delegate (JuegoDeseadoMostrar p1, JuegoDeseadoMostrar p2)
-				{
-					if (p1.Juego.PrecioActualesTiendas[0].Precio == p2.Juego.PrecioActualesTiendas[0].Precio)
-					{
-						return p2.Juego.PrecioActualesTiendas[0].FechaDetectado.CompareTo(p1.Juego.PrecioActualesTiendas[0].FechaDetectado);
-					}
-					else
-					{
-						return p1.Juego.PrecioActualesTiendas[0].Precio.CompareTo(p2.Juego.PrecioActualesTiendas[0].Precio);
-					}
-				});
-			}
-		}
+            if (deseadosMostrar.Count > 0)
+            {
+                deseadosMostrar.Sort(delegate (JuegoDeseadoMostrar p1, JuegoDeseadoMostrar p2)
+                {
+                    if (p1.Juego.PrecioActualesTiendas[0].Precio == p2.Juego.PrecioActualesTiendas[0].Precio)
+                    {
+                        return p2.Juego.PrecioActualesTiendas[0].FechaDetectado.CompareTo(p1.Juego.PrecioActualesTiendas[0].FechaDetectado);
+                    }
+                    else
+                    {
+                        return p1.Juego.PrecioActualesTiendas[0].Precio.CompareTo(p2.Juego.PrecioActualesTiendas[0].Precio);
+                    }
+                });
+            }
+        }
 
-		await UserManager.UpdateAsync(usuario);
-	}
+        GuardarUsuario();
+    }
 
-	public class JuegoDeseado
-	{
-		public string IdBaseDatos { get; set; }
-		public string IdSteam { get; set; }
-		public Juegos.JuegoDRM DRM { get; set; }
-	}
-
-	public class JuegoDeseadoMostrar
-	{
-		public Juegos.Juego Juego { get; set; }
-		public Juegos.JuegoDRM DRM { get; set; }
-	}
+    private async void GuardarUsuario()
+    {
+        await UserManager.UpdateAsync(usuario);
+    }
 
 	private List<string> LeerSteamDeseados(string datos)
 	{
