--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -104,6 +104,11 @@
 			{
 				@if (Herramientas.JuegoFicha.CogerMinimoDRM(drm, Model.juego.PrecioMinimosHistoricos, Model.juego.PrecioActualesTiendas).Length > 0)
 				{
+					@if (SignInManager.IsSignedIn(User))
+					{
+						@(await Html.RenderComponentAsync<Componentes.Secciones.JuegoFichaDeseado>(RenderMode.ServerPrerendered, new { juego = Model.juego, drm = drm }))
+					}
+
 					<div class="juego-drm-centrado perfil-espacio-bottom">
 						<div class="perfil juego-drm-imagen">
 							@if (drm == JuegoDRM.DRMFree)
@@ -132,7 +137,7 @@
 													@Calculadora.HaceTiempo(precio.FechaDetectado)
 												</div>
 
-												<div class="juego-descuento">
+												<div style="width: 75px; text-align: center;" class="juego-descuento">
 													@precio.Descuento.ToString()%
 												</div>
 
@@ -202,8 +207,6 @@
 				}
 			}
 		}
-		
-
     </div>
 </div>
 
