--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -38,7 +38,12 @@
                 <div class="menu-dropdown">
                     <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
                     <div class="menu-dropdown-contenido">
-                        <a class="texto-cabecera menu-dropdown-item" asp-page="/Wishlist">Wishlist</a>
+
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Wishlist">Wishlist</a>
+                        }
+                        
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">Historical Lows</a>
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/LastAdded">Last Added</a>
                     </div>
@@ -100,7 +105,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @* <script src="_framework/blazor.server.js" asp-append-version="true"></script> *@
+    @* <script src="~/_framework/blazor.server.js"></script> *@
 
     @section Scripts {
         <script src="~/_framework/blazor.server.js"></script>
