--- a/pepeizqs deals web/Pages/Admin/Humble.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Humble.cshtml
@@ -8,7 +8,7 @@
 @inject UserManager<Usuario> UserManager
 
 @{
-    ViewData["Title"] = "Humble";
+    ViewData["Title"] = "Admin Humble";
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
