--- a/pepeizqs deals web/Pages/Admin/Tiendas.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas.cshtml
@@ -8,7 +8,7 @@
 @inject UserManager<Usuario> UserManager
 
 @{
-	ViewData["Title"] = "Tiendas";
+	ViewData["Title"] = "Admin Tiendas";
 	Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
