--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -70,6 +70,8 @@
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Juegos/Añadir">Añadir Juego</a>
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Tiendas">Tiendas</a>
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Pendientes">Pendientes</a>
+                                            <hr>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Suscripciones">Suscripciones</a>
                                         </div>
                                     </div>
                                 </li>
