--- a/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
@@ -37,7 +37,7 @@
                                 }
                             </div>
 
-                            <div style="width: 12%;">
+                            <div style="width: 12%; text-align: center;">
                                 @Herramientas.JuegoFicha.PrecioMinimoActual(juego, true)
                             </div>
                         </div>
