--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -573,3 +573,44 @@
     right: 0;
     margin: auto;
 }
+
+select {
+    appearance: none;
+    outline: 10px red;
+    border: 0px;
+    box-shadow: none;
+    flex: 1;
+    padding: 0 1em;
+    color: var(--colorTexto);
+    background-color: var(--fondoEntrada);
+    font-family: 'Motiva Sans';
+    cursor: pointer;
+}
+
+    select::-ms-expand {
+        display: none;
+    }
+
+.opciones-combobox {
+    position: relative;
+    display: flex;
+    height: 45px;
+    border: 0px;
+    border-radius: 0;
+    overflow: hidden;
+}
+
+    .opciones-combobox::after {
+        content: '\25BC';
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 1em;
+        background-color: var(--fondoCuerpo);
+        transition: .25s all ease;
+        pointer-events: none;
+    }
+
+    .opciones-combobox:hover::after {
+        color: var(--colorTextoOscuro);
+    }
